<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="725dp"
    android:layout_gravity="center"
    android:background="@drawable/popupbg"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="340dp"
        android:layout_height="138dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ricebowl" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView3"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:text="@string/ricebowl"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_marginTop="1dp"
        android:textColor="@color/black"
        android:fontFamily="@font/alata"
        android:text="Ingredients:"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="333dp"
        android:layout_height="162dp"
        android:layout_below="@id/textView7"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="329dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="331dp"
            android:layout_height="140dp"
            android:layout_below="@id/textView7"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/alata"
            android:text="@string/ricebowlingredients"
            android:textColor="@color/black" />
    </ScrollView>

    <ScrollView
        android:layout_width="331dp"
        android:layout_height="314dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="9dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="343dp"
            android:layout_below="@id/textView9"
            android:fontFamily="@font/alata"
            android:text="@string/ricebowlreciper"
            android:textColor="@color/black" />
    </ScrollView>


</RelativeLayout>